Fix generate_license endpoint to accept direct JSON body instead of payload wrapper
- Update GenerateLicenseRequest model to have direct fields
- Modify admin_handler to access fields directly
- Update routes, services, and start_service to use license_request parameter
- Update admin.html JS to send direct object
- Update README.md curl example to match new format
- Clean up imports and fix linting issues

--- a/easylic/server/admin.html
+++ b/easylic/server/admin.html
@@ -92,23 +92,22 @@
             const password = document.getElementById('genPassword').value;
 
             try {
+                const req = {
+                    license_id: licenseId,
+                    product: product,
+                    valid_from: validFrom,
+                    valid_until: validUntil,
+                    policy: {
+                        version: "1.0",
+                        max_sessions: maxSessions,
+                        features: features
+                    },
+                    password: password
+                };
                 const response = await fetch('/generate_license', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        payload: {
-                            license_id: licenseId,
-                            product: product,
-                            valid_from: validFrom,
-                            valid_until: validUntil,
-                            policy: {
-                                version: "1.0",
-                                max_sessions: maxSessions,
-                                features: features
-                            },
-                            password: password
-                        }
-                    })
+                    body: JSON.stringify(req)
                 });
                 if (response.ok) {
                     const blob = await response.blob();
